fix(react-utils): Preserve whitespace strings to maintain layout

--- a/website/src/pages/demo.module.css
+++ b/website/src/pages/demo.module.css
@@ -108,6 +108,7 @@
   .main {
     flex-direction: column;
     position: relative;
+    align-items: center;
   }
   .text {
     padding-bottom: 1.5rem;
